ASUSFETest/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Requested__c</fullName>
        <description>College, school or department who requested the campaign</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>College of Public Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coll Technology &amp; Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cronkite School-Journ/MassComm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herberger Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ira A Fulton Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liberal Arts &amp; Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MaryLouFulton Teachers College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Interdis Arts &amp; Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing &amp; Health Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&apos;Connor College of Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Letters &amp; Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Sustainability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W.P. Carey School of Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to filter out Test Campaigns</description>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Silverpop_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>ASU_UG_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>ASU UG</value>
        </filters>
        <label>ASU UG Campaigns</label>
        <sharedTo>
            <role>ES_Enrollment_Services</role>
            <role>ES_Enrollment_Services_Communication</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Admit_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Admit</value>
        </filters>
        <label>Admit Campaigns</label>
        <sharedTo>
            <role>ES_Enrollment_Services</role>
            <role>ES_Enrollment_Services_Communication</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>notEqual</operation>
            <value>Aborted,Template,Completed</value>
        </filters>
        <label>Active Status</label>
        <sharedTo>
            <role>ES_Enrollment_Services_Communication</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Campaigns_No_Tests_GRTE_Info</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>notContain</operation>
            <value>GRTE Information Session</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active - No Tests or GRTE Info</label>
        <sharedTo>
            <role>ES_Enrollment_Services</role>
            <role>ES_Enrollment_Services_Communication</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Completed_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Completed Status</label>
        <sharedTo>
            <role>ES_Enrollment_Services</role>
            <role>ES_Enrollment_Services_Communication</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Test_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Test Campaigns</label>
        <sharedTo>
            <role>ES_Enrollment_Services_Communication</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GRE_Campaigns</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Test Scores-GRE</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Purchased List-GRE</value>
        </filters>
        <label>GRE Test Scores</label>
        <sharedTo>
            <role>ES_Enrollment_Services_Communication</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GRTE_Info_Sessions_2014_iTeach</fullName>
        <booleanFilter>1 AND (2 and 3)</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>iTeach</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2014</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2014</value>
        </filters>
        <label>MLF Grad Info Sessions 2014 iTeach</label>
        <sharedTo>
            <role>ES_Teachers_College</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GRTE_Info_Sessions_EdDLdrshp</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Event-GRTE</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>EdD Ldrshp</value>
        </filters>
        <label>MLF Graduate Info Sessions EdD Ldrshp</label>
        <sharedTo>
            <role>ES_Teachers_College</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GRTE_Information_Sessions</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Event-GRTE</value>
        </filters>
        <label>MLF Graduate Information Sessions</label>
        <sharedTo>
            <roleAndSubordinates>ES_Teachers_College</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GRTE_Information_Sessions_2013</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Event-GRTE</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2013</value>
        </filters>
        <label>MLF Graduate Information Sessions 2013</label>
        <sharedTo>
            <role>ES_Teachers_College</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GRTE_Information_Sessions_2014</fullName>
        <booleanFilter>1 AND (2 and 3)</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Event-GRTE</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2014</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2014</value>
        </filters>
        <label>MLF Graduate Information Sessions 2014</label>
        <sharedTo>
            <role>ES_Teachers_College</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IncompleteAppCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>incomplete</value>
        </filters>
        <label>Incomplete App Campaigns</label>
        <sharedTo>
            <role>ES_Enrollment_Services</role>
            <role>ES_Enrollment_Services_Communication</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Planned_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Planned,In Progress</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>notContain</operation>
            <value>GRTE Information Session</value>
        </filters>
        <label>Planned Status</label>
        <sharedTo>
            <role>ES_Enrollment_Services</role>
            <role>ES_Enrollment_Services_Communication</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Marketing</fullName>
        <active>true</active>
        <label>Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>